//
//  SharedAccessibilityIdentifier.swift
//  Niffler
//
//  Created by Станислав Карпенко on 06.12.2023.
//

import Foundation

enum LoginViewIDs: String {
    case userNameTextField = "userNameTextField"
    case passwordTextField = "passwordTextField"
    case loginButton = "loginButton"
}

enum SpendsViewIDs: String {
    case spendsList = "spendsList"
    case addSpendButton = "addSpendButton"
}

enum SignUpViewIDs: String {
    case userNameTextField = "userNameTextField"
    case passwordTextField = "passwordTextField"
    case confirmPasswordTextField = "confirmPasswordTextField"
    case signUpButton = "signUpButton"
}
