...
                            userData.setValues(from: userDataModel)
                            onLogin()
                        }
                    } catch {
                        print(error)
                        isLoadingForLogin = false
                        errorText = "Нет такого пользователя. Попробуйте другие данные"
                    }
                }

                if let errorText {
                    Text(errorText)
                        .font(.caption2)
...
